# laika3d

./: CMakeLists.txt  build.sh  configure.sh  debug.sh  debug_tests.sh  demo.cpp  demo.sh  run.sh  run_demo.sh  run_tests.sh
demo/: CMakeLists.txt  main.cpp
demo/res/shaders/: shader.glsl  simplevertex.shader  skybox.glsl
laika3d/: CMakeLists.txt  camera.cpp  camera.hpp  geometrynode.cpp  geometrynode.hpp  indexbuffer.cpp  indexbuffer.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  renderer.cpp  renderer.hpp  resource.hpp  resourcemanager.cpp  resourcemanager.hpp  scenegraph.cpp  scenegraph.hpp  scenenode.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  transformationnode.cpp  transformationnode.hpp  vertexbuffer.cpp  vertexbuffer.hpp  window.cpp  window.hpp
laika3d/assets/: mesh.cpp  resource.hpp  resourcemanager.cpp  shader.cpp
laika3d/scene/: geometrynode.cpp  geometrynode.hpp  scene.cpp  scene.hpp  scenegraph.hpp  scenenode.hpp  transformationnode.hpp
res/shaders/: phongfragment.shader  simplefragment.shader
src/: CMakeLists.txt  main.cpp
src/assets/: material.hpp  material_presets.hpp  mesh.cpp  mesh.hpp  resource.hpp  resourcemanager.cpp  resourcemanager.hpp  shader.cpp  shader.hpp  texture.cpp  vertexbuffer.cpp  vertexbuffer.hpp
src/debug/: logging.hpp
src/math/: CMakeLists.txt  linalg.hpp  math.hpp  vec3.hpp
src/renderer/: renderer.cpp  renderer.hpp
src/rendering/: CMakeLists.txt  indexbuffer.cpp  indexbuffer.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  shaders.hpp  shaderutils.cpp  shaderutils.hpp  vertexbuffer.cpp  window.cpp
src/scene/: camera.cpp  camera.hpp  geometrynode.cpp  geometrynode.hpp  pointlight.hpp  scene.cpp  scene.hpp  scenenode.hpp  transformationnode.cpp
tc3d/: CMakeLists.txt  camera.hpp  renderer.hpp  vertexbuffer.cpp  vertexbuffer.hpp  window.hpp
test/: CMakeLists.txt  resourcetest.cpp  scenegraphtest.cpp  test.cpp
test/shaders/: simple.glsl
